[package]
name = "future-bus"
description = "Futures based SPMC channel (bus)"
version = "0.2.0"
authors = ["Stefan Kaufhold <cere@fastmail.fm>"]
edition = "2018"
keywords = ["futures", "broadcast", "channel", "spmc", "bus"]
readme = "README.md"
categories = ["asynchronous", "concurrency"]
repository = "https://github.com/cere42/future-bus"
license = "Apache-2.0"

[features]
default = ["default-channels"]
default-channels = ["futures-channel"]

[dependencies]
futures-core = "0.3"
futures-sink = "0.3"
futures-channel = { version = "0.3", features = ["sink"], optional = true }
slab = "0.4.2"
parking_lot = "0.9.0"

[dev-dependencies]
futures = "0.3"

[lib]
name = "future_bus"